# ZeroSyncStylusRustLibrary-V1

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: field_ops.rs  gas_analysis.rs
docs/: api.md  architecture.md  milestone1_spec.md  performance.md  security.md
examples/: basic_field_ops.rs  simple_benchmark.rs  simplified_curve.rs  simplified_field.rs
src/: lib.rs  polynomial.rs
src/arithmetic/: field.rs  mod.rs  montgomery.rs  simd.rs  simd_avx512.rs  traits.rs
src/curve/: bn254.rs  mod.rs
src/field/: extension.rs  fp.rs  mod.rs
src/util/: mod.rs
tests/: field_arithmetic.rs  polynomial.rs  simd_operations.rs
